--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div id="root"></div>
   <script>
-    global = globalThis //<- this should be enough
+    global = globalThis
   </script>
   <script type="module" src="/src/main.jsx"></script>
 </body>
